<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.4.1</version>
    <relativePath/>
  </parent>

  <groupId>de.useweb</groupId>
  <artifactId>use-web-backend</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>use-web-backend</name>
  <description>Backend for the new web-based UML/OCL system inspired by USE concepts.</description>

  <properties>
    <java.version>21</java.version>
    <test.groups>!original-use-reference &amp; !ocl-24-compliance</test.groups>
  </properties>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-surefire-plugin</artifactId>
        <configuration>
          <groups>${test.groups}</groups>
        </configuration>
      </plugin>
    </plugins>
  </build>

  <profiles>
    <profile>
      <id>reference-tests</id>
      <properties>
        <test.groups>original-use-reference</test.groups>
      </properties>
    </profile>
    <profile>
      <id>compliance-tests</id>
      <properties>
        <test.groups>ocl-24-compliance</test.groups>
      </properties>
    </profile>
  </profiles>
</project>
